CSS: Fix responsivité

--- a/app/Resources/views/form/commentForm.html.twig
+++ b/app/Resources/views/form/commentForm.html.twig
@@ -2,6 +2,6 @@
 <form name="appbundle_comment" method="POST" id="commentForm" class="d-flex flex-row justify-content-between" data-url="{{ path('addComment', {'id' : actualite.id} ) }}">
     <div class="input-group align-items-center">
 	    <input type="text" id="content" name="content" required="required" placeholder="Ajouter un commentaire..." class="form-control" />
-	    <button role="submit" class="input-group-addon text-center" href="#"><span class="fa fa-envelope input-group-icon"></span></button>
+	    <button role="submit" class="input-group-addon text-center" href="#"><span class="fa fa-paper-plane input-group-icon"></span></button>
 	</div>
 </form>
