--- a/app/Resources/views/main/faq.html.twig
+++ b/app/Resources/views/main/faq.html.twig
@@ -27,7 +27,7 @@
     	<section class="mt-5">
     		<div class="container-fluid">
     			<div class="heading">
-    				<h3>Un problème ?</h3>
+    				<h2>Des questions ?</h2>
     				<p>Vous trouverez ici l'ensemble des réponses aux questions les plus récurrentes</p>
     			</div>
     			<div class="row align-items-center">
