--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -100,13 +100,23 @@ h6 {
   text-transform: uppercase;
 }
 
-p, span {
+p {
   font-size: 14px ;
   line-height: 22px;
 }
 
+span {
+  font-size: 10px;
+  line-height: 16px;
+}
+
 a {
   color: var(--purple);
+}
+
+a, a:hover {
+  outline: none;
+  text-decoration: none;
 }
 
 @media (min-width: 576px) {
@@ -117,6 +127,9 @@ a {
   h2 {
     font-size: 36px;
     line-height: 39px;
+  }
+  span {
+    font-size: 12px;
   }
 }
 
@@ -314,7 +327,7 @@ input {
   border-radius: 50px !important;
 }
 
-input[placeholder], [placeholder], *[placeholder], textarea[placeholder] {
+input[placeholder], [placeholder], *[placeholder]{
   margin-left: 30px;
 }
 
@@ -324,7 +337,8 @@ textarea {
 }
 
 textarea[placeholder] {
-  padding: 15px 12px;
+  padding: 15px 30px;
+  margin: 0;
 }
 
 .input-group-icon {
@@ -350,6 +364,8 @@ textarea[placeholder] {
 .form-control {
   background: none;
   border: none;
+  padding: 0;
+  font-size: 14px;
 }
 
 .form-group {
@@ -369,8 +385,8 @@ textarea[placeholder] {
 
 .scrollToTop {
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 12px;
+  right: 12px;
   width: 48px;
   height: 48px;
   background: var(--pampas);
@@ -387,6 +403,12 @@ textarea[placeholder] {
   color: var(--purple);
 }
 
+@media (min-width: 576px){
+  .scrollToTop {
+    bottom: 30px;
+    right: 30px;
+  }
+}
 
 /* MES OBSERVATIONS */
 .nao-card{
@@ -472,7 +494,7 @@ textarea[placeholder] {
     }
     p {
       font-size: 12px ;
-      line-height: 16px;
+      line-height: 18px;
     }
 }
 /* MODAL */
@@ -487,6 +509,12 @@ textarea[placeholder] {
 .close-button {
   font-size: 30px;
   color: var(--egg-shell);
+  background: none;
+  border: none;
+  outline: none;
+}
+.close-button:focus, .close-button::selection, .close-button:hover, .close-button:visited, .close-button:active {
+  outline: none;
 }
 
 .waitingObservationModal{
@@ -517,4 +545,55 @@ textarea[placeholder] {
 
 .user-name {
   font-weight: 700;
+}
+
+
+/* COMMENTS */
+.imgComment {
+    border-radius: 25px;
+    height: 40px;
+}
+
+.social-comment {
+    color: var(--purple);
+}
+
+.comm-display {
+    border-radius: 25px !important;
+    background: #FFFFFF;
+    border: 2px solid var(--lightest-brown);
+    margin-bottom: 0;
+    height: 200px;
+    max-height: 350px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.comm p, .comm span {
+    line-height: 16px;
+}
+
+.time {
+    color: #87888C ;
+}
+
+.comm-display::-webkit-scrollbar { 
+  width: 12px;
+  background-color: #F5F5F5;
+  padding-right: 20px;
+  border-radius: 10px;
+}
+
+.comm-display::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: var(--purple);
+}
+
+#addComment .input-group {
+    margin-bottom: 0;
+}
+
+#addComment .input-group-icon {
+    margin-left: -3px;
 }
