CSS: Fix responsivité Onglets profil

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -103,14 +103,13 @@
             <div class="row justify-content-center align-items-center" >
                 <div class="col-12 col-md-4 text-center" id="souscrire">
                     <h2>SOUSCRIRE</h2>
-                    <p>à notre newsletter</p>
+                    <p class="mb-3 mb-md-0">à notre newsletter</p>
                 </div>
                 <div class="col-12 col-md-8">
                     <div class="input-group align-items-center mb-0">
                         <input type="text" class="form-control" placeholder="Adresse email">
                         <a class="input-group-addon text-center" href="#"><i class="fa fa-envelope input-group-icon"></i></a>
                     </div>
-                    <p class="text-muted">Votre email ne sera pas partagé</p>
                 </div>
             </div>
         </div>
