--- a/web/css/base.css
+++ b/web/css/base.css
@@ -201,6 +201,10 @@ a, a:hover {
   z-index: 1000;
 }
 
+.navbar .btn-primary {
+  line-height: inherit;
+}
+
 @media (min-width: 768px) {
   .navbar-brand {
     font-size: 40px;
