--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -9,17 +9,14 @@
     width: 170px;
   }
 }
-#userTab {
-
-}
 
 .nav-tabs {
     border: none;
     background: var(--purple);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    height: 130px;
     margin-top: -80px;
+    padding-top: 80px;
     position: relative;
     z-index: 995;
 }
@@ -33,7 +30,7 @@
     color: var(--lighter-egg-shell);
     position: relative;
     border: none;
-    height: 130px;
+    height: 50px;
 }
 
 .nav-tabs .nav-link.active {
@@ -44,16 +41,29 @@
 }
 
 .nav-tabs .nav-item:first-child .nav-link {
+    margin-top: -30px;
+    padding-top: 60px;
     border-bottom-left-radius: 10px;
 }
 
 .nav-tabs .nav-item:last-child .nav-link {
+    border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 
-@media (min-width: 576px){
+@media (min-width: 768px){
+    .nav-tabs {
+        padding-top: 0;
+    }
     .nav-tabs .nav-link {
-        /* CSS RESPONSIVITE ONGLETS*/
+        height: 130px;
+    }
+    .nav-tabs .nav-item:first-child .nav-link {  
+        margin-top: inherit;
+        padding-top: inherit;
+    }
+    .nav-tabs .nav-item:last-child .nav-link.active {  
+        border-bottom-left-radius: 0px;
     }
 }
 
