--- a/web/css/base.css
+++ b/web/css/base.css
@@ -476,6 +476,7 @@ textarea[placeholder] {
     }
 }
 /* MODAL */
+/*
 .close-wrap {
   width: 48px;
   height: 48px;
@@ -517,4 +518,4 @@ textarea[placeholder] {
 
 .user-name {
   font-weight: 700;
-}
+}*/
