--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -31,7 +31,7 @@
                 {# Carte oiseau observé #}
                 <div class="col-12 col-sm-10 col-lg-6 col-xxl-5 mx-auto mx-xl-0 mb-4">
                     <div class="p-2 nao-card mx-auto">
-                        <div class="d-flex flex-nowrap">
+                        <div class="d-flex flex-nowrap align-items-center">
                             <div class="bird-img-wrapper">
                                 <img src="{{ bird.picture }}"
                                      class="bird-img">
