--- a/web/css/base.css
+++ b/web/css/base.css
@@ -345,6 +345,16 @@ textarea[placeholder] {
   margin: 0;
 }
 
+label {
+  position: absolute;
+  display: none;
+  margin-top: -11px;
+  margin-left: 30px;
+  background: var(--off-white);
+  height: 11px;
+  padding: 0 5px;
+}
+
 .input-group-icon {
     color: var(--lighter-egg-shell);
     margin: -1px;
@@ -355,6 +365,7 @@ textarea[placeholder] {
     background: white;
     border: 2px solid var(--lightest-brown);
     margin-bottom: 30px;
+    min-height: 52px;
 }
 
 .input-group-addon {
@@ -377,7 +388,7 @@ textarea[placeholder] {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: stretch;
-      align-items: stretch;
+  align-items: stretch;
   width: 100%;
 }
 
@@ -601,3 +612,4 @@ textarea[placeholder] {
 #addComment .input-group-icon {
     margin-left: -3px;
 }
+
