--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -1,3 +1,5 @@
+/*Partie Gesttion des Utilisateurs*/
+
 .imgUser {
     border-radius: 25px;
     width: 50px;
@@ -11,7 +13,6 @@
     border: 2px solid var(--lightest-brown);
     margin-bottom: 0;
     height: 600px;
-    max-height: 350px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -41,6 +42,37 @@
 .fa-2x {
     margin-left:  10px;
     color: var(--brown);
+}
+
+/*Partie gestion des Actualites*/
+
+.actualites-display {
+    border-radius: 25px !important;
+    background: #FFFFFF;
+    border: 2px solid var(--lightest-brown);
+    margin-bottom: 0;
+    height: 150px;
+    max-height: 350px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.actualites {
+    min-height: 50px;
+}
+
+
+.actualites-display::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+    padding-right: 20px;
+    border-radius: 10px;
+}
+
+.actualites-display::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: var(--purple);
 }
 
 
