--- a/app/Resources/views/main/admin.html.twig
+++ b/app/Resources/views/main/admin.html.twig
@@ -43,8 +43,8 @@
             {#-------------------------------#}
             {#PARTIE Gestion des utilisateurs#}
             {#-------------------------------#}
-            <div class="col m-3" style="border: 1px solid grey">
-                <h3>Gestion des utilisateurs</h3>
+            <div class="col m-3">
+                <h3 class="text-center">Gestion des utilisateurs</h3>
                 <input type="search" id="searchUser" placeholder="Rechercher un utilisateur" class="input-group">
                 <section id="userSection">
 
@@ -52,7 +52,7 @@
 
                         <div class="flex-wrap flex-column users-display flex-nowrap p-0">
                             {% for user in users %}
-                                <div class="row mb-2">
+                                <div class="row mb-2" id="user_{{ user.id }}">
                                     <div class="col-3 col-sm-4 col-lg-2 ml-2">
                                         <img src="{{ asset('img/'~user.profilePicture) }}" alt=""
                                              class="imgUser rounded-circle">
@@ -80,7 +80,6 @@
                                             <a href="#">
                                                 <i class="fa fa-star-half-o fa-2x"
                                                    aria-hidden="true"
-                                                   id="becomeUser"
                                                    data-userId="{{ user.id }}"
                                                    {% for role in user.roles %}
                                                        {% if role == "ROLE_NATURALISTE" %}
@@ -92,7 +91,6 @@
                                             <a href="#">
                                                 <i class="fa fa-star fa-2x"
                                                    aria-hidden="true"
-                                                   id="becomeNaturaliste"
                                                    {% for role in user.roles %}
                                                     {% if role == "ROLE_USER" %}
                                                         style="opacity: 0.5"
@@ -101,7 +99,7 @@
 
                                                 </i>
                                             </a>
-                                            <a href="#"><i class="fa fa-trash fa-2x" data-toggle="modal" data-target="#deleteUserModal" aria-hidden="true"></i></a>
+                                            <a href="#"><i class="fa fa-trash fa-2x delete-user" id="delete_user_{{ user.id }}" data-toggle="modal"  data-target="#deleteUserModal" aria-hidden="true" data-url="{{ path('delete_user', { 'id': user.id } ) }}" data-userid="{{ user.id }}"></i></a>
 
                                             {#-----MODAL DELETE USER-----#}
                                             <div class="modal" id="deleteUserModal">
@@ -113,11 +111,11 @@
                                                                 <button class="close" data-dismiss="modal">&times;</button>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <p>Vous êtes sur le point de supprimer définitivement {{ user.username }}</p>
+                                                                <p>Vous êtes sur le point de supprimer définitivement cet utilisateur</p>
                                                             </div>
                                                             <div class="modal-footer row">
                                                                 <button class="btn btn-info col-3 close" style="background-color: grey" data-dismiss="modal">Annuler</button>
-                                                                <button class="btn col-3 ml-auto" type="submit" data-dismiss="modal" id="confirmDeleteUserBtn" data-userid="{{ user.id }}" >Confirmer</button>
+                                                                <button class="btn col-3 ml-auto confirmDeleteUserBtn" type="submit" data-dismiss="modal">Confirmer</button>
 
                                                             </div>
                                                         </div>
@@ -139,8 +137,56 @@
             {#-------------------------------#}
             {#PARTIE Gestion des actualités#}
             {#-------------------------------#}
-            <div class="col m-3" style="border: 1px solid grey">
-                <h3>Gestion des actualités</h3>
+            <div class="col m-3">
+                <h3 class="text-center">Gestion des actualités</h3>
+                <section id="actualiteSection">
+
+                    <div class="container">
+
+                        <div class="flex-wrap flex-column actualites-display flex-nowrap p-0">
+                            {% for actualite in actualites %}
+                                <div class="row mb-2 mt-2 ml-2" id="actualite_{{ actualite.id }}">
+
+                                    <div class="col-9 col-sm-9 col-lg-9 mr-3">
+                                        <p class=""><strong>{{ actualite.title }}</strong></p>
+                                    </div>
+
+                                    <div class="media-body col-3 col-sm-3 col-lg-3 ml-3">
+                                        <div>
+
+                                            <a href="#">
+                                                <i class="fa fa-pencil-square-o fa-2x"
+                                                   aria-hidden="true"
+                                                   id="edit_{{ actualite.id }}"
+                                                   data-actualiteId="{{ actualite.id }}" >
+                                                </i>
+                                            </a>
+
+                                            <a href="#">
+                                                <i class="fa fa-trash fa-2x"
+                                                   aria-hidden="true"
+                                                   id="delete_actualite_{{ actualite.id }}"
+                                                   data-actualiteId="{{ actualite.id }}"
+                                                   data-url="{{ path('delete_actualite', {'id' :  actualite.id} ) }}">
+                                                </i>
+                                            </a>
+
+
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+
+                    </div>
+
+                    {#Ajouter une actualite#}
+                    <div id="add_actualite">
+                        <h3 class="text-center">Ajouter une actualité</h3>
+
+                    </div>
+                </section>
+
             </div>
         </div>
 
