--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,14 +23,14 @@
 
 
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0">
             <a class="col-3 navbar-brand" href="{{ path('homepage') }}">NAO</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="fa fa-bars"></span>
             </button>
 
-            <div class="col-lg-9 collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="col-lg-9 collapse navbar-collapse py-5 py-lg-0" id="navbarSupportedContent">
                 <ul class="col-lg-8 navbar-nav mt-sm-0  px-0 justify-content-center">
                     <div class="row flex-column flex-lg-row text-center">
                         <li class="nav-item">
@@ -61,22 +61,20 @@
 
 
                 {% if is_granted('ROLE_USER') %}
-                    <div class="mx-auto col-4 d-flex flex-column flex-lg-row justify-content-lg-end">
-                        <a class="my-2 my-lg-0 nav-link" href="{{ path('profile') }}">PROFIL</a>
-                        <a class="my-2 my-lg-0 nav-link btn btn-outline" href="{{ path('security_logout') }}">DÉCONNEXION</a>
+                    <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end">
+                        <a class="mx-auto my-2 mx-lg-0 nav-link" href="{{ path('profile') }}">PROFIL</a>
+                        <a class="mx-auto my-2 mx-lg-0 nav-link btn btn-outline" href="{{ path('security_logout') }}">DÉCONNEXION</a>
                     </div>
 
                 {% else %}
-                    <div class="mx-auto col-4 d-flex flex-column flex-lg-row justify-content-lg-end">
+                    <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end">
                         <a class="mx-auto my-2 btn btn-outline mx-lg-1" href="{{ path('security_login') }}">CONNEXION</a>
                         <a class="mx-auto my-2 btn btn-primary mx-lg-1" href="{{ path('user_register') }}">INSCRIPTION</a>
                     </div>
                 {% endif %}
             </div>
 
-            <div>
-                
-            <div class="col-12 navbar-svg d-flex flex-column align-items-center">
+            <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0">
                 <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <desc>Aile</desc>
                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -86,20 +84,7 @@
                 </svg>
                 <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO">
             </div>   
-            </div>
         </nav>
-
-        {# SVG DE NAVBAR #}
-        {# <div class="navbar-svg d-flex flex-column align-items-center">
-            <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <desc>Aile</desc>
-                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <path d="M375,0 L375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 L0,0 L375,0 Z" fill="#FFFEF9"></path>
-                    <path d="M375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 C0.1125,58.325 0.23125,58.225 0.34375,58.125 C29.525,31.7 79.99375,12.0875 140.03125,5.1875 C143.575,4.78125 147.15625,4.41875 150.76875,4.1 C153.175,3.89375 155.59375,3.7 158.025,3.53125 C160.4625,3.35625 162.90625,3.20625 165.3625,3.08125 C170.28125,2.81875 175.25,2.65 180.25625,2.5625 C182.7625,2.51875 185.28125,2.49375 187.80625,2.49375 C188.225,2.49375 188.64375,2.49375 189.0625,2.5 C268.9375,2.725 338.4625,25 375,57.875" fill="#E7E7E7"></path>
-                </g>
-            </svg>
-            <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO">
-        </div> #}
 
 {#-----------------
 --------------------
