--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,14 +23,14 @@
 
 
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0 flex-wrap">
             <a class="col-3 navbar-brand" href="{{ path('homepage') }}">NAO</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fa fa-bars"></span>
             </button>
 
-            <div class="col-lg-9 collapse navbar-collapse py-5 py-lg-0" id="navbarSupportedContent">
+            <div class="col-lg-9 collapse navbar-collapse py-5 p-lg-0" id="navbarSupportedContent">
                 <ul class="col-lg-8 navbar-nav mt-sm-0  px-0 justify-content-center">
                     <div class="row flex-column flex-lg-row text-center">
                         <li class="nav-item">
