--- a/app/Resources/views/main/admin.html.twig
+++ b/app/Resources/views/main/admin.html.twig
@@ -45,12 +45,15 @@
             {#-------------------------------#}
             <div class="col m-3">
                 <h3 class="text-center">Gestion des utilisateurs</h3>
-                <input type="search" id="searchUser" placeholder="Rechercher un utilisateur" class="input-group">
+                <div class="input-group align-items-center mb-3 ml-3">
+                    <input type="text" class="form-control" id="searchUser" placeholder="Rechercher un utilisateur">
+                    <a class="input-group-addon text-center" href="#searhUser"><i class="fa fa-search input-group-icon"></i></a>
+                </div>
                 <section id="userSection">
 
                     <div class="container">
 
-                        <div class="flex-wrap flex-column users-display flex-nowrap p-0">
+                        <div class="flex-wrap flex-column users-display flex-nowrap p-0" id="userDisplay">
                             {% for user in users %}
                                 <div class="row mb-2" id="user_{{ user.id }}">
                                     <div class="col-3 col-sm-4 col-lg-2 ml-2">
@@ -81,25 +84,29 @@
                                                 <i class="fa fa-star-half-o fa-2x"
                                                    aria-hidden="true"
                                                    data-userId="{{ user.id }}"
-                                                   {% for role in user.roles %}
-                                                       {% if role == "ROLE_NATURALISTE" %}
-                                                           style="opacity: 0.5"
-                                                       {% endif %}
-                                                   {% endfor %} >
+                                                        {% for role in user.roles %}
+                                                            {% if role == "ROLE_NATURALISTE" %}
+                                                                style="opacity: 0.5"
+                                                            {% endif %}
+                                                        {% endfor %} >
                                                 </i>
                                             </a>
                                             <a href="#">
                                                 <i class="fa fa-star fa-2x"
                                                    aria-hidden="true"
-                                                   {% for role in user.roles %}
-                                                    {% if role == "ROLE_USER" %}
-                                                        style="opacity: 0.5"
-                                                    {% endif %}
+                                                        {% for role in user.roles %}
+                                                            {% if role == "ROLE_USER" %}
+                                                                style="opacity: 0.5"
+                                                            {% endif %}
                                                         {% endfor %} >
 
                                                 </i>
                                             </a>
-                                            <a href="#"><i class="fa fa-trash fa-2x delete-user" id="delete_user_{{ user.id }}" data-toggle="modal"  data-target="#deleteUserModal" aria-hidden="true" data-url="{{ path('delete_user', { 'id': user.id } ) }}" data-userid="{{ user.id }}"></i></a>
+                                            <a href="#"><i class="fa fa-trash fa-2x delete-user"
+                                                           id="delete_user_{{ user.id }}" data-toggle="modal"
+                                                           data-target="#deleteUserModal" aria-hidden="true"
+                                                           data-url="{{ path('delete_user', { 'id': user.id } ) }}"
+                                                           data-userid="{{ user.id }}"></i></a>
 
                                             {#-----MODAL DELETE USER-----#}
                                             <div class="modal" id="deleteUserModal">
@@ -108,14 +115,21 @@
                                                         <div class="modal-header">
                                                             <div class="modal-title">
                                                                 <h5>Je suis un titre</h5>
-                                                                <button class="close" data-dismiss="modal">&times;</button>
+                                                                <button class="close" data-dismiss="modal">&times;
+                                                                </button>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <p>Vous êtes sur le point de supprimer définitivement cet utilisateur</p>
+                                                                <p>Vous êtes sur le point de supprimer définitivement
+                                                                    cet utilisateur</p>
                                                             </div>
                                                             <div class="modal-footer row">
-                                                                <button class="btn btn-info col-3 close" style="background-color: grey" data-dismiss="modal">Annuler</button>
-                                                                <button class="btn col-3 ml-auto confirmDeleteUserBtn" type="submit" data-dismiss="modal">Confirmer</button>
+                                                                <button class="btn btn-info col-3 close"
+                                                                        style="background-color: grey"
+                                                                        data-dismiss="modal">Annuler
+                                                                </button>
+                                                                <button class="btn col-3 ml-auto confirmDeleteUserBtn"
+                                                                        type="submit" data-dismiss="modal">Confirmer
+                                                                </button>
 
                                                             </div>
                                                         </div>
@@ -158,7 +172,7 @@
                                                 <i class="fa fa-pencil-square-o fa-2x"
                                                    aria-hidden="true"
                                                    id="edit_{{ actualite.id }}"
-                                                   data-actualiteId="{{ actualite.id }}" >
+                                                   data-actualiteId="{{ actualite.id }}">
                                                 </i>
                                             </a>
 
@@ -181,9 +195,18 @@
                     </div>
 
                     {#Ajouter une actualite#}
-                    <div id="add_actualite">
+                    <div id="add_actualite" class="mt-3">
                         <h3 class="text-center">Ajouter une actualité</h3>
-
+                        <div id="addActualiteForm">
+                            {{ form_start(formActualite) }}
+                            {{ form_row(formActualite.title, {
+                                'attr' : {
+                                    'id' : 'titleInput',
+                                    'placeholder' : 'Titre',
+                                }}) }}
+                            {{ form_row(formActualite.content) }}
+                            {{ form_end(formActualite) }}
+                        </div>
                     </div>
                 </section>
 
@@ -196,6 +219,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/admin.js') }}"></script>
+    {#<script src="{{ asset('js/admin.js') }}"></script>#}
+    <script src="{{ asset('js/adminSearchUsers.js') }}"></script>
 {% endblock %}
 
