--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,9 +30,9 @@
                 <span class="fa fa-bars"></span>
             </button>
 
-            <div class="col-lg-9 collapse navbar-collapse py-5 p-lg-0" id="navbarSupportedContent">
-                <ul class="col-lg-8 navbar-nav mt-sm-0  px-0 justify-content-center">
-                    <div class="row flex-column flex-lg-row text-center">
+            <div class="col-lg-9 collapse navbar-collapse p-lg-0" id="navbarSupportedContent">
+                <ul class="col-lg-8 navbar-nav mt-sm-0 py-3 py-lg-0 px-0 justify-content-center">
+                    <div class="row flex-column flex-lg-row text-center justify-content-center">
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('homepage') }}">ACCUEIL</a>
                         </li>
@@ -61,18 +61,40 @@
 
 
                 {% if is_granted('ROLE_USER') %}
-                    <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end">
+                    <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end pb-5 pb-lg-0">
                         <a class="mx-auto my-2 mx-lg-0 nav-link" href="{{ path('profile') }}">PROFIL</a>
                         <a class="mx-auto my-2 mx-lg-0 nav-link btn btn-outline" href="{{ path('security_logout') }}">DÉCONNEXION</a>
                     </div>
 
                 {% else %}
-                    <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end">
+                    <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end pb-5 pb-lg-0">
                         <a class="mx-auto my-2 btn btn-outline mx-lg-1" href="{{ path('security_login') }}">CONNEXION</a>
                         <a class="mx-auto my-2 btn btn-primary mx-lg-1" href="{{ path('user_register') }}">INSCRIPTION</a>
                     </div>
                 {% endif %}
             </div>
+
+
+
+            {# POUR TRANSFORMATION #}
+            {# <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0">
+                <svg preserveAspectRatio="none" version="1.1" width="100%" height="80px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="420 263 1440 76" style="enable-background:new 420 263 1440 76;" xml:space="preserve">
+                    
+                    <path class="st0" d="M1859.8,263.8c-140.3,44.4-407.2,74.5-713.9,74.8c-1.6,0-3.2,0-4.8,0c-9.7,0-19.4,0-29-0.1
+                    c-19.2-0.1-38.3-0.4-57.2-0.7c-9.4-0.2-18.8-0.4-28.2-0.6c-9.3-0.2-18.6-0.5-27.9-0.8c-13.9-0.4-27.6-0.9-41.2-1.5
+                    c-229.8-9.3-423-35.6-535.2-71.2H1859.8z" fill="#FFFEF9"/>
+                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <path id="Fill-3" class="st0" d="M1141.8,318c-286.8,0-544.2-21.1-719.7-54.5c-0.7-0.1-1.5-0.3-2.2-0.4c0.4,0.1,0.9,0.3,1.3,0.4
+                            c112,35.7,305.8,62.2,536.3,71.5c13.6,0.5,27.4,1,41.2,1.5c9.2,0.3,18.5,0.5,27.9,0.8c9.4,0.2,18.7,0.4,28.2,0.6
+                            c18.9,0.4,38,0.6,57.2,0.7c9.6,0.1,19.3,0.1,29,0.1c1.6,0,3.2,0,4.8,0c306.7-0.3,573.6-30.4,713.9-74.8
+                            C1684.3,297,1427.7,318,1141.8,318z" fill="#E7E7E7"/>
+                    </g>
+                </svg>
+                <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO" style="margin-top: -30px">
+            </div> #}
+
+
+
 
             <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0">
                 <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
