--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -72,9 +72,23 @@
             </div>
 
 
+            <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0">
+                <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <desc>Aile</desc>
+                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <path d="M375,0 L375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 L0,0 L375,0 Z" fill="#FFFEF9"></path>
+                        <path d="M375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 C0.1125,58.325 0.23125,58.225 0.34375,58.125 C29.525,31.7 79.99375,12.0875 140.03125,5.1875 C143.575,4.78125 147.15625,4.41875 150.76875,4.1 C153.175,3.89375 155.59375,3.7 158.025,3.53125 C160.4625,3.35625 162.90625,3.20625 165.3625,3.08125 C170.28125,2.81875 175.25,2.65 180.25625,2.5625 C182.7625,2.51875 185.28125,2.49375 187.80625,2.49375 C188.225,2.49375 188.64375,2.49375 189.0625,2.5 C268.9375,2.725 338.4625,25 375,57.875" fill="#E7E7E7"></path>
+                    </g>
+                </svg>
+                <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO">
+            </div>   
+
+
+
+
 
             {# POUR TRANSFORMATION #}
-            {# <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0">
+            <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0 hidden-svg" style="display:none;">
                 <svg preserveAspectRatio="none" version="1.1" width="100%" height="80px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="420 263 1440 76" style="enable-background:new 420 263 1440 76;" xml:space="preserve">
                     
                     <path class="st0" d="M1859.8,263.8c-140.3,44.4-407.2,74.5-713.9,74.8c-1.6,0-3.2,0-4.8,0c-9.7,0-19.4,0-29-0.1
@@ -88,21 +102,7 @@
                     </g>
                 </svg>
                 <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO" style="margin-top: -30px">
-            </div> #}
-
-
-
-
-            <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0">
-                <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <desc>Aile</desc>
-                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <path d="M375,0 L375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 L0,0 L375,0 Z" fill="#FFFEF9"></path>
-                        <path d="M375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 C0.1125,58.325 0.23125,58.225 0.34375,58.125 C29.525,31.7 79.99375,12.0875 140.03125,5.1875 C143.575,4.78125 147.15625,4.41875 150.76875,4.1 C153.175,3.89375 155.59375,3.7 158.025,3.53125 C160.4625,3.35625 162.90625,3.20625 165.3625,3.08125 C170.28125,2.81875 175.25,2.65 180.25625,2.5625 C182.7625,2.51875 185.28125,2.49375 187.80625,2.49375 C188.225,2.49375 188.64375,2.49375 189.0625,2.5 C268.9375,2.725 338.4625,25 375,57.875" fill="#E7E7E7"></path>
-                    </g>
-                </svg>
-                <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO">
-            </div>   
+            </div>
         </nav>
 
 {#-----------------
