CSS: Transition Floating labels + CSS html select et type=number

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -72,7 +72,7 @@
             </div>
 
 
-            <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0">
+            <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0 straight">
                 <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <desc>Aile</desc>
                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -88,7 +88,7 @@
 
 
             {# POUR TRANSFORMATION #}
-            <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0 hidden-svg" style="display:none;">
+            <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0 flipped hidden-svg">
                 <svg preserveAspectRatio="none" version="1.1" width="100%" height="80px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="420 263 1440 76" style="enable-background:new 420 263 1440 76;" xml:space="preserve">
                     
                     <path class="st0" d="M1859.8,263.8c-140.3,44.4-407.2,74.5-713.9,74.8c-1.6,0-3.2,0-4.8,0c-9.7,0-19.4,0-29-0.1
