--- a/web/css/base.css
+++ b/web/css/base.css
@@ -292,6 +292,12 @@ button:focus {
     line-height: 46px;
     padding-top: 15px;
   }
+  .straight {
+    display: flex !important;
+  }
+  .flipped {
+    display: none !important;
+  }
 }
 
 /* BANNIERE DE TITRE DE PAGE */
@@ -394,18 +400,30 @@ button:focus {
 }
 
 /* FORMULAIRE */
-input {
-  height: 48px;
+input, select {
+  height: 48px !important;
   border-radius: 50px !important;
   padding-left: 30px !important;
 }
 
-input:focus, textarea:focus {
+input:focus, textarea:focus, select:focus  {
   box-shadow: none !important;
 }
 
-input[placeholder], [placeholder], *[placeholder]{
+input[placeholder], select[placeholder], [placeholder], *[placeholder]{
   padding-left: 30px;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+select::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 textarea {
@@ -452,6 +470,10 @@ label {
     background: var(--purple);
     border-radius: 25px !important;
     margin-right: 6px;
+}
+
+a.input-group-addon:hover {
+    background-color: var(--darker-purple);
 }
 
 .form-control {
@@ -697,5 +719,4 @@ label {
 #addComment .input-group-icon {
     margin-left: -3px;
 }
-
 
