Travail sur l'upload de fichier

--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -50,7 +50,7 @@
                     'placeholder' : "Nombre d'oiseaux observés"
                     }
                 }) }}
-                {{ form_row(formObservation.picture, {'attr' : {
+                {{ form_row(formObservation.image, {'attr' : {
                     'placeholder' : "Ajouter une photo"
                     }
                 }) }}
