travail sur la partie d'ajout d'observation

--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -60,7 +60,7 @@
                     }
                 }) }}
                 {{ form_row(formObservation.bird, {'attr' : {
-                    'placeholder' : "Ajouter le nom de l'espèce"
+                    'placeholder' : "Ajouter le nom de l'espèce",
                     }
                 }) }}
                 {{ form_row(formObservation.imageFile) }}
