JS: Theme Googlemap

--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -46,7 +46,7 @@
                     <div class="p-2 nao-card mx-auto">
                         <div class="d-flex flex-nowrap align-items-center">
                             <div class="bird-img-wrapper">
-                                <img src="{{ bird.picture }}"
+                                <img src="{ bird.picture }"
                                      class="bird-img">
                             </div>
                             <div class="col d-flex flex-column justify-content-between">
