--- a/app/Resources/views/main/admin.html.twig
+++ b/app/Resources/views/main/admin.html.twig
@@ -12,7 +12,7 @@
 
     <div class="container-fluid heading-page">
         <h1 class="text-center">ADMINISTRATION</h1>
-        <p class="text-center">Accueil >> Administration</p>
+        <p class="text-center"><a href="{{ path('homepage') }}">Accueil</a> >> <a href="{{ path('admin') }}">Administration</a></p>
     </div>
     <div class="wave-svg">
         <svg width="100%" height="100%" viewBox="0 0 1430 80" version="1.1" xmlns="http://www.w3.org/2000/svg"
