--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -10,8 +10,8 @@
 
 {% block body %}
 <div class="container-fluid heading-page">
-    <h1 class="text-center">Observation</h1>
-    <p class="text-center">Accueil >> observation</p>
+    <h1 class="text-center">Oiseaux</h1>
+    <p class="text-center"><a href="{{ path('homepage') }}">Accueil</a> >> <a href="{{ path('oiseaux') }}">Oiseaux</a></p>
 </div>
 <div class="wave-svg">
     <svg width="100%" height="100%" viewBox="0 0 1430 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
